# task-manager-fastapi

./: pyproject.toml
task_manager_fastapi/: app.py
