[project]
name = "task-manager-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Brunner",email = "victor.brunner12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

# Configurando o RUFF
[tool.ruff]
line-length = 79 # Limitando o numero de caracteres numa linha de codigo seguindo a PEP.
extend-exclude = ["migrations"] # Excluindo todos os codigos da verificação do ruff que forem criados na pasta "migrations"

# Configurando os tipos de verificações (BOAS PRATICAS) para serem feitas
# I = Verificação de ordenação de imports
# F = Verificação de boas práticas de codigo
# E = Verificação de estilo de código
# W = Aviso sobre o estilo de codigo
# PL = "Erros" em relação a boas práticas de codigo
# PT = Verificação de boas praticas com o PYTEST
# Q = Verificação de aspas
[tool.ruff.lint]
preview = true # Mostrar no terminal os avisos de boas práticas
select = ["I", "F", "E", "W", "PL", "PT", "Q"]

# Formatador do Ruff
[tool.ruff.format]
preview = true
quote-style = "double" # Estilo de aspas, "single" = '' para todas Strings.

# Configuração do pytest
[tool.pytest.ini_options] # ini_options = Opções de inicialização
pythonpath = "." # pythonpath configura onde é pra rodar os testes, o "." indica na pasta onde o pyproject.toml se encontra.
addopts = "-p no:warnings" # Removendo os avisos desnecessários da tela

# Configurando o TaskiPY
[tool.taskipy.tasks]
# Juntando comandos com taskipy
# Rodar um comando e outros em seguida, sem precisar digitar os dois ou mais comandos seguidos.
# Para identificação os nomes dos pre e post de algum comando tem que ser: "pre_NOMEDATASK".
# Ex: pre_lint: Task roda antes de rodar o link quando form chamado "task lint"

lint = "ruff check" # Adicionando a variavel "lint" como uma forma mais facil e rapida de rodar o "ruff check"
pre_format = "ruff check --fix" # Rodando o comando de correção do código antes de rodar o format.
format = "ruff format" # (Formatação completa) Adicionando a varaivel "format" como uma forma mais facil e rapida de rodar o "ruff format"
run = "fastapi dev task_manager_fastapi/app.py" # Forma facil de subir a aplicação com fastapi
pre_test = "task lint" # Comando para rodar antes do test
test = "pytest -s -x --cov=task_manager_fastapi -vv" # Forma facil de rodar os testes do app
post_test = "coverage html" # Comando para criar o html

